Bug 372476 - Kickoff loses keyboard focus forever after closing with meta
Summary: Kickoff loses keyboard focus forever after closing with meta
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (show other bugs)
Version: 5.8.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-14 16:16 UTC by Fabian Vogt
Modified: 2016-11-15 09:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2016-11-14 16:16:13 UTC
Likely affects applets other than kickoff as well.

To reproduce:

- Open Kickoff
- Type some letters -> Entered into search field
- Press Meta to close the launcher
- Open Kickoff by clicking on the icon
- Type some letters -> NOT entered into search field

Focus can only be restored by pressing Meta.
Comment 1 Kai Uwe Broulik 2016-11-14 16:17:29 UTC
I can confirm. You need to press into the kickoff window for it to get focus, just clicking the button in the panel won't after you closed it once using Meta.
Comment 2 Kai Uwe Broulik 2016-11-15 09:31:18 UTC
Git commit a195a6b0b3971f864b1b95ca93ac034bae9fa736 by Kai Uwe Broulik.
Committed on 15/11/2016 at 09:31.
Pushed by broulik into branch 'master'.

[AppletInterface] Never pull focus away from fullRepresentation

When closing the launcher using Meta key, it pulls focus away and when
clicking the button to expand the applet, it won't get focus again.
REVIEW: 129404

M  +5    -2    src/scriptengines/qml/plasmoid/appletinterface.cpp

http://commits.kde.org/plasma-framework/a195a6b0b3971f864b1b95ca93ac034bae9fa736